[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmc"
version = "1.0.0"
description = "Code for LLPS condensate analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "mdtraj",
  "mdsim @ git+https://github.com/feiglab/mdsim.git",
]

[project.scripts]
#example = "llpsanalysis.cli.example:main"

[tool.setuptools]
package-dir = {"" = "src"}
#script-files = [
#  "scripts/example.sh",
#]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E","F","I","UP"]
ignore = ["UP007", "UP045", "E501"]
